--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ajv": "^6.5.4",
     "bulma": "^0.7.2",
     "firebase": "^5.5.7",
+    "moment": "^2.22.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-scripts": "2.0.5"
